--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&family=Zen+Dots&display=swap');
 
 
-body{
+body {
     font-family: 'Zen Dots', cursive;
     padding: 0;
     margin: 0;
@@ -11,21 +11,23 @@ body{
 }
 
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
+    flex: 1;
     /* justify-content: center; */
     align-items: center;
     /* border: 2px solid red; */
-    height: 71.9vh;
+    height: 72.9vh;
+    background-color: #31190a;
 }
 
-.title{
+.title {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: black;
-    opacity: .5;
+    /* opacity: .5; */
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, .9);
     width: 100%;
     height: 150px;
@@ -34,7 +36,7 @@ body{
     margin: 0;
 }
 
-.show-result{
+.show-result {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,26 +47,28 @@ body{
     font-size: 22px;
 }
 
-.selection>span{
+.selection>span {
     font-size: 80px;
     margin: 0 25px;
 }
 
-.round>span{
+.round>span {
     margin: 20px 18px;
     font-size: 20px;
 }
-.round>.computer{
+
+.round>.computer {
     padding-left: 20px;
 }
 
-.buttons{
+.buttons {
     display: flex;
     justify-content: center;
     height: 150px;
     width: 100%;
 }
-.btn{
+
+.btn {
     height: 140px;
     width: 140px;
     border: none;
@@ -74,7 +78,7 @@ body{
     font-size: 90px;
 }
 
-.btn:hover{
+.btn:hover {
     cursor: pointer;
     background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
     font-size: 100px;
@@ -98,14 +102,14 @@ body{
     height: 400px;
     position: fixed;
     left: 50%;
-    top: 50%; 
+    top: 50%;
     margin-left: -200px;
     margin-top: -200px;
     z-index: 1;
     opacity: .9;
 }
 
-.modal-btn{
+.modal-btn {
     margin: 10px;
     padding: 15px 45px;
     text-align: center;
@@ -121,18 +125,18 @@ body{
     display: block;
 }
 
-.modal-btn:hover{
+.modal-btn:hover {
     cursor: pointer;
     color: black;
     /* transition: 1s; */
     background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
 
-.show-modal{
+.show-modal {
     visibility: visible;
 }
 
-.footer{
+.footer {
     position: fixed;
     bottom: 0;
     background-color: black;
@@ -142,10 +146,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: .7;
+    /* opacity: .7; */
 }
 
-.myVideo{
+/* .myVideo {
     z-index: -10;
     position: absolute;
     top: 0;
@@ -156,4 +160,4 @@ body{
     object-fit: cover;
     background-repeat: no-repeat;
     opacity: 1;
-}
+} */
